@@ -3,6 +3,11 @@ from 2.6.1 to 2.6.2
 - updating inlined help information (-h option)
 - fixed unexpected behavior of the dar command-line filtering mechanism
   met when the provided path to -P or -g options was ending with a slash
+- renaming 'path opertor + (std::string)' as method append() to avoid
+  compiler using it when a std::string need first to be converted to path
+  before adding it to an existing path.
+- adding check test to detect when path::append() is used to add a path
+  instead of a filename to an existing path object.
 
 from 2.6.0 to 2.6.1
 - fixed error in man page
